project(ch01_basic)

add_executable(a_thread_run_callable a_thread_run_callable.cc)
add_executable(b_thread_guard        b_thread_guard.cc)
add_executable(c_transfer_arg        c_transfer_arg.cc)
add_executable(d_jthread             d_jthread.cc)
add_executable(e_parallel_accumulate e_parallel_accumulate.cc)
