project(ch03_tool)

add_executable(a_singleton_standard  a_singleton_standard.cc)
add_executable(b_singleton_hungry    b_singleton_hungry.cc)
add_executable(c_singleton_lazy      c_singleton_lazy.cc)
add_executable(d_singleton_call_once d_singleton_call_once.cc)
add_executable(e_singleton_template  e_singleton_template.cc)
