project(ch04_tpool)

add_executable(a_condition_var     a_condition_var.cc)
add_executable(b_queue_thread_safe b_queue_thread_safe.cc)
add_executable(c_async             c_async.cc)
add_executable(d_task              d_task.cc)
add_executable(e_promise           e_promise.cc)
add_executable(f_shared_future     f_shared_future.cc)
add_executable(h_thread_pool       h_thread_pool.cc)
